--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,16 @@
           <!-- </ul> -->
           
         </div>
+
+        <div class="col-lg-2"></div>
+
+        <div class="col-lg-4">
+          <h4><a href="#">联系我们</a></h4>
+          <p>电话：027-87531631</p>
+          <p>传真：027-87531631</p>
+          <p>邮箱：578410647@qq.com</p>
+          
+        </div>
       </div>
 
       <div class="footer">
